<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onCclickInterface"
            type="com.asprime.techmatesupport.listners.OnClickHandlerInterface" />

        <variable
            name="authViewModel"
            type="com.asprime.techmatesupport.viewmodel.AuthVIewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/dialog_bg_round"
            android:elevation="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/userFormIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/image_circle_bg"
                    android:backgroundTint="@color/grey"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_vpn_key_24"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/userFormTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/koz_go_pro_regular"
                    android:gravity="center_vertical"
                    android:text="@string/change_password_item"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/old_password"
                app:boxBackgroundColor="@android:color/transparent"
                android:background="@color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailParentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:hint="@string/new_password"
                app:boxBackgroundColor="@android:color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordParentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                app:boxBackgroundColor="@android:color/transparent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:id="@+id/addClearBtnLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/closeDialogBtn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@color/colorError"
                    android:textSize="18sp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:background="@color/light_grey"/>

                <TextView
                    android:id="@+id/userDataPostBtn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/update"
                    android:textColor="@color/colorBottomDialogDefaultButton"
                    android:textSize="18sp"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progressLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:background="#A3333232"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:gravity="center">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>