<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="nofoundVisible"
            type="java.lang.Boolean" />

        <variable
            name="progressBarVisibility"
            type="java.lang.Boolean" />

        <variable
            name="ticketHistoryAdapter"
            type="com.asprime.techmatesupport.adapter.TicketHistoryAdapter" />

        <variable
            name="onClickInterface"
            type="com.asprime.techmatesupport.listners.OnClickHandlerInterface" />

        <variable
            name="ticketViewModel"
            type="com.asprime.techmatesupport.viewmodel.TicketViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/searchParentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/filter_bar_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/white"
                android:hint="@string/search_for_records"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <ImageButton
                android:id="@+id/refreshBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background"
                android:contentDescription="TODO"
                android:elevation="10dp"
                android:onClick="@{(v)->ticketViewModel.getHistoryTicket()}"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_refresh_24" />

            <ImageButton
                android:id="@+id/filterBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:drawable/editbox_background"
                android:contentDescription="TODO"
                android:elevation="10dp"
                android:padding="3dp"
                android:onClick="@{(v)->onClickInterface.onClick(v)}"
                android:src="@drawable/ic_baseline_filter_alt_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/filterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/filter_bar_color"
            android:elevation="0dp"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchParentLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/koz_go_pro_regular"
                android:text="@string/company"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/companySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:drawable/edit_text"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:rotation="90"
                    android:src="@drawable/ic_baseline_arrow_right_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/koz_go_pro_regular"
                    android:text="@string/stores"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/koz_go_pro_regular"
                    android:text="@string/date_range"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                    <Spinner
                        android:id="@+id/storeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/edit_text"
                        android:backgroundTint="@color/white" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:rotation="90"
                        android:src="@drawable/ic_baseline_arrow_right_24" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1">

                    <Spinner
                        android:id="@+id/dateRangeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/edit_text"
                        android:backgroundTint="@color/white"
                        android:entries="@array/date_range" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:rotation="90"
                        android:src="@drawable/ic_baseline_arrow_right_24" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:fontFamily="@font/koz_go_pro_regular"
                    android:text="@string/from_date" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:fontFamily="@font/koz_go_pro_regular"
                    android:text="@string/to_date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/fromDate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableRight="@drawable/ic_baseline_calendar_month_24"
                    android:focusable="false"
                    android:padding="5dp"
                    android:text="@={ticketViewModel.fromDate}"
                    android:onClick="@{(v)->onClickInterface.onClick(v)}"
                    android:background="@android:drawable/edit_text"
                    android:focusableInTouchMode="false" />


                <EditText
                    android:id="@+id/toDate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:text="@={ticketViewModel.toDate}"
                    android:background="@android:drawable/edit_text"
                    android:onClick="@{(v)->onClickInterface.onClick(v)}"
                    android:drawableRight="@drawable/ic_baseline_calendar_month_24"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:adapter="@{ticketHistoryAdapter}"
            android:orientation="vertical"
            android:visibility="@{nofoundVisible ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterLayout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="@{!nofoundVisible ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterLayout">

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:contentDescription="TODO"
                android:src="@drawable/no_found" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/prgressBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{progressBarVisibility ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filterLayout">

            <ProgressBar
                style="@android:style/Widget.Holo.Light.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Please Wait..."
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>